--- a/PDSD_Labs_KursWork.vcxproj
+++ b/PDSD_Labs_KursWork.vcxproj
@@ -29,7 +29,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BinarySearchTree.cpp" />
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Main_Osin.cpp" />
     <ClCompile Include="Setbitset.cpp" />
     <ClCompile Include="SetClass.cpp" />
     <ClCompile Include="SetList.cpp" />
