--- a/PDSD_Labs_KursWork.vcxproj.filters
+++ b/PDSD_Labs_KursWork.vcxproj.filters
@@ -38,7 +38,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="Main_Osin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SetClass.cpp">
