--- a/PDSD_Labs_KursWork.vcxproj
+++ b/PDSD_Labs_KursWork.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BinarySearchTree.h" />
+    <ClInclude Include="Tree_Lab7_Osin.h" />
     <ClInclude Include="Setbitset.h" />
     <ClInclude Include="SetClass.h" />
     <ClInclude Include="SetList.h" />
@@ -28,8 +28,8 @@
     <ClInclude Include="Setunorderedset.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BinarySearchTree.cpp" />
-    <ClCompile Include="Main_Osin.cpp" />
+    <ClCompile Include="Tree_Lab7_Osin.cpp" />
+    <ClCompile Include="Lab7_Osin.cpp" />
     <ClCompile Include="Setbitset.cpp" />
     <ClCompile Include="SetClass.cpp" />
     <ClCompile Include="SetList.cpp" />
